<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="#EAE0D4"
    android:orientation="vertical"
    tools:context=".EnterEvent">

    <TextView
        android:text="@string/enter_participant"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/title"
        android:paddingBottom="15dp"
        android:hint="@string/enter_your_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/enterBtn"
        android:layout_margin="18dp"
        android:text="@string/enter_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>