<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="#EAE0D4"
    android:orientation="vertical"
    tools:context=".CreatePostActivity">

    <TextView
        android:text="@string/add_event"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/title"
        android:paddingBottom="15dp"
        android:hint="@string/enter_event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/description"
        android:paddingBottom="15dp"
        android:hint="@string/enter_event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="350dp"/>

    <Button
        android:id="@+id/save"
        android:layout_margin="18dp"
        android:text="@string/add_event"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"/>



</LinearLayout>