<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#EAE0D4"
    android:orientation="vertical"
    tools:context=".AboutUs">

    <TextView
        android:text="@string/about_us"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="Our Services"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        android:textSize="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="411dp"
        android:layout_height="481dp"
        android:layout_gravity="center"
        android:src="@drawable/aboutus" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/about_us_desc"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/about_us_desc2"
        android:textColor="@color/black"
        android:textSize="18sp" />

</LinearLayout>