<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#2B2B2B"
    tools:context=".Homepage">

    <ImageView
        android:layout_width="65dp"
        android:layout_height="89dp"
        android:layout_gravity="center"
        android:src="@drawable/capture"/>

    <TextView
        android:text="@string/wally_and_co"
        android:textColor="#EAE0D4"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    />

    <ImageView
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:src="@drawable/pinkline" />

    <TextView
        android:text="@string/volunteer_charity"
        android:textColor="#EAE0D4"
        android:textAlignment="center"
        android:paddingTop="50dp"
        android:paddingBottom="65dp"
        android:textStyle="bold"
        android:textSize="80sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="281dp"
        android:layout_height="143dp"
        android:layout_gravity="center"
        android:src="@drawable/capture1" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_margin="18dp"
        android:background="#EA728C"
        android:text="@string/get_started"/>

</LinearLayout>